# ExcelFilterPro

./: .gitignore  BUILD.md  PROJECT_SUMMARY.md  README.md  demo.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_gui.py  优化Excel处理器.py  分析excel结构.py  分析复杂Excel.py  测试数据映射功能.py
.github/workflows/: build-exe.yml  release.yml
docs/: build-guide.md  deployment.md  design.md  dev-guide.md  requirements.md  testing.md  user-manual.md
resources/icons/: README.md
resources/styles/: README.md
saved_plans/: 数据映射方案_20250702_002658.json  方案1.json
scripts/: build.py  build_exe.py  setup_dev.bat
src/: __init__.py
src/core/: __init__.py  config_manager.py  data_mapping_engine.py  enhanced_excel_processor.py  excel_processor.py
src/database/: __init__.py  connection.py  dao.py  models.py
src/ui/: __init__.py  main_window.py
src/ui/widgets/: __init__.py  config_widget.py  data_mapping_dialog.py  data_mapping_widget.py  field_mapping_widget.py  filter_widget.py  result_widget.py  rule_config_dialog.py  upload_widget.py
src/utils/: __init__.py  constants.py  exceptions.py  helpers.py  logger.py
tests/: __init__.py  conftest.py  test_basic.py
